# Phitron

./: .gitignore  CMakeLists.txt  README.md  c.c
.cph/: .c.c_00775326f063fcbd3441873822ac9e24.prob
Algorithms/Week 01/Assainment 01/: Can_Go.cpp  Connected_Nodes.cpp  Connected_or_Not.cpp  Count_Apartments.cpp  Count_Apartments_II.cpp
Algorithms/Week 01/Module 01/: Adjacency Matrix.cpp  Adjacency_Matrix.cpp  adjacencyL.cpp  cpp.cpp  edge_list.cpp  input.txt  k.cpp  output.txt  tempCodeRunnerFile.cpp
Algorithms/Week 01/Module 02/: BFS_Traversal_with_Level.cpp  BFS_tarvars.cpp  BFS_using_pair.cpp  Path_Printing_using_BFS_Implementation.cpp  input.txt
Algorithms/Week 01/Module 03/: BFS_2d_grid_path_printint.cpp  BFS_on_2d_grid.cpp  DFS_2d_grid.cpp  DFS_Implimantsaon.cpp  input.txt  output.txt
Algorithms/Week 01/Module 2.5/: 01.cpp
Algorithms/Week 01/Module 3.5/: 1254. Number of Closed Islands.cpp  Flood Fill.cpp  depth-first-traversal-for-a-graph.cpp  input.txt  output.txt  pair_printing_2d_grid.cpp  test.cpp
Algorithms/Week 02/Module 05/: Cycle-detection-directed-dfs.cpp  Detect_Cycle_in_Undirected_Graph_using_BFS.cpp  Detect_Cycle_in_Undirected_Graph_using_DFS.cpp
Algorithms/Week 02/Module 06/: Dijkstra_Naive_Implementation.cpp  Dijkstra_Optimize_Approach.cpp  input.txt  output.txt
Algorithms/Week 02/Module 07/: Bellman_Ford.cpp  Floyd_Warshall_Algorithm.cpp  input.txt  output.txt
Algorithms/Week 02/Module 6.5/: Undirected_Graph_Cycle.cpp  input.txt
C++ for DSA/Week 01/Module 01/: Setprecision.cpp  arry.cpp  i_input_in_c++.cpp  magical_string.cpp  min_max_swap.cpp  string.cpp  swice2.cpp  swice_case1.cpp
C++ for DSA/Week 01/Module 02/: Delete_Dynamic_Memory.cpp  Dynamic_Array.cpp  Staic_vs_Dynamic.cpp  dynamic_funson_addres.cpp
C++ for DSA/Week 01/Module 03/: Class_and_Object.cpp  Constructor.cpp  Dynamic_Object.cpp  Return_Object_from_Function.cpp  Sort_an_Array.cpp
C++ for DSA/Week 01/Module 2.5/: E_Max.cpp  H_Sorting.cpp  K_Max_and_Min.cpp  M_Capital_or_Small_or_Digit.cpp  practice01.cpp  practice02.cpp
C++ for DSA/Week 01/Module 3.5/: O_Sort_String.cpp  V_Comparison.cpp  class.cpp  cricatar.cpp
C++ for DSA/Week 03/: Iterator.cpp  Modifiers .cpp  String_Capacity_Functions.cpp  stream.cpp
Contest/Monthly contest 01/: Any_Special_Searching.cpp  Boss_Hierarchy.cpp  Chocolate_Chocolate.cpp
Semister 01/.cph/: .Count_Before_One.c_70e7dbbbc99e5c8360196a2de44d2ae0.prob  .Pattern_2.c_a2a3e5de8989c49b22c04aa96751487e.prob
Semister 01/Week 01/: index.html
Semister 01/Week 03/: C_Compare.c  Pointers_in_C.c
(+1507 files in other folders)
