cmake_minimum_required(VERSION 3.28)
project(Phitron_C_programming C)

set(CMAKE_C_STANDARD 11)

add_executable(Phitron_C_programming
        "Semister 01/Week 01/assainment 01/problem01.c"
        "Semister 01/Week 01/assainment 01/problem02.c"
        "Semister 01/Week 01/assainment 01/problem03.c"
        "Semister 01/Week 01/assainment 01/problem04.c"
        "Semister 01/Week 01/assainment 01/problem05.c"
        "Semister 01/Week 01/Module 1/data_type.c"
        "Semister 01/Week 01/Module 1/introducation.c"
        "Semister 01/Week 01/Module 1/variable.c"
        "Semister 01/Week 01/Module 2/01.c"
        "Semister 01/Week 01/Module 2/tempCodeRunnerFile.c"
        "Semister 01/Week 01/Module 2.5/01.c"
        "Semister 01/Week 01/Module 3/do_while_loop.c"
        "Semister 01/Week 01/Module 3/for_loop.c"
        "Semister 01/Week 01/Module 3/tempCodeRunnerFile.c"
        "Semister 01/Week 01/Module 3/while_loop.c"
        "Semister 01/Week 02/Assainment 02/01.c"
        "Semister 01/Week 02/Assainment 02/02.c"
        "Semister 01/Week 02/Assainment 02/03.c"
        "Semister 01/Week 02/Assainment 02/04.c"
        "Semister 01/Week 02/Assainment 02/05.c"
        "Semister 01/Week 02/Module 05/problem 04.c"
        "Semister 01/Week 02/Module 05/problem01.c"
        "Semister 01/Week 02/Module 05/Problem02.c"
        "Semister 01/Week 02/Module 05/Problem03.c"
        "Semister 01/Week 02/Module 05/problem05.c"
        "Semister 01/Week 02/Module 05/problem06.c"
        "Semister 01/Week 02/Module 06/B_Even_Numbers.c"
        "Semister 01/Week 02/Module 06/C_Even_Odd_Positive_and_Negative.c"
        "Semister 01/Week 02/Module 06/D_Fixed_Password.c"
        "Semister 01/Week 02/Module 06/E_Max.c"
        "Semister 01/Week 02/Module 06/F_Multiplication_table.c"
        "Semister 01/Week 02/Module 06/Q_Digits.c"
        "Semister 01/Week 02/Module 07/01.c"
        "Semister 01/Week 02/Module 6.5/A_Timon_and_Pumbaa.c"
        "Semister 01/Week 02/Module 6.5/C_Next_Alphabet.c"
        "Semister 01/Week 02/Module 6.5/D_Ali_Baba_and_Puzzles.c"
        "Semister 01/Week 02/Module 6.5/G_Katryoshka.c"
        "Semister 01/Week 02/Module 6.5/I_Lucky_Numbers.c"
        "Semister 01/Week 02/Module 6.5/K_Divisors.c"
        "Semister 01/Week 02/Module 6.5/tempCodeRunnerFile.c"
        "Semister 01/Week 03/Module 09/Insert_Element_in_an_Array.c"
        "Semister 01/Week 03/Module 09/tempCodeRunnerFile.c"
        "Semister 01/Week 03/Module 10/01.c")
